Parse result for GZoltar 1.7.3